[package]
name = "satsbudget_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.33", features = ["persistence"] }
egui = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }